# radiant

./: .dockerignore  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  BRUKER_BRANCH_CHANGES.md  CMakeLists.txt  CMakeUserPresets.json  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  ReadMe.md  build-aws-sdk-cpp.sh  build-local.sh  build_deb.sh  control  control.amd64  control.arm64  deploy_deb.sh  deploy_docker_image.sh  deploy_docker_manifest.sh  example_params.pythiaConfig  get-or-build-libtorch.sh  get_release_version.sh  install-build-deps-ubuntu.sh  main.cpp  s3_package_uploader.py  test-local.sh  test_container.sh
AVXLib/: AVXLibConfig.cmake.in  CMakeLists.txt
AVXLib/src/: AVXUtils.cpp  AVXUtils.h  avx2neon_intrinsics.h  mm256_loadu_ps_arm.h
AVXLib/tests/: AVXUtilsTests.cpp  CMakeLists.txt
AlgorithmsFFLib/: CMakeLists.txt
AlgorithmsFFLib/src/: ApexConnector.cpp  ApexConnector.h  BiophysicalCalcs.cpp  BiophysicalCalcs.h  CandidateScorertron.cpp  CandidateScorertron.h  CandidateScorertron2.cpp  CandidateScorertron2.h  CandidateScorertronV2.cpp  CandidateScorertronV2.h  CandidateScores.cpp  CandidateScores.h  CandidateScoresDDA.cpp  CandidateScoresDDA.h  CandidateScoresFeatureManager.cpp  CandidateScoresFeatureManager.h  CandidateScoresV2.cpp  CandidateScoresV2.h  Centroidotron.cpp  Centroidotron.h  ClassifierWeightsManager.cpp  ClassifierWeightsManager.h  DeIsotopotron.cpp  DeIsotopotron.h  DeMultiplexScanerator.cpp  DeMultiplexScanerator.h  DeMultiplexScaneratorManager.cpp  DeMultiplexScaneratorManager.h  Deconvolvotron.cpp  Deconvolvotron.h  DiscriminantScoretron.cpp  DiscriminantScoretron.h  FDRCLassifierNeuralNet.cpp  FDRCLassifierNeuralNet.h  FeatureFinderHill.cpp  FeatureFinderHill.h  FeatureFinderHillBuilder.cpp  FeatureFinderHillBuilder.h  FeatureFinderHillRTree.cpp  FeatureFinderHillRTree.h  (+64 more)
AlgorithmsFFLib/tests/: BiophysicalCalcsTests.cpp  CMakeLists.txt  CandidateScorertronTests.cpp  CentroidotronTests.cpp  ClassifierWeightsManagerTests.cpp  DeIsotopotronTests.cpp  DeMultiplexScaneratorTests.cpp  DeconvolvotronTests.cpp  DiscriminantScoretronTest.cpp  DiscriminantScoretronTests.cpp  FDRCLassifierNeuralNetTests.cpp  FeatureFinderHillBuilderTests.cpp  FeatureFinderHillTests.cpp  IdLevelQValueAnnotatorTests.cpp  IsotopicDistributionBuilderTests.cpp  MS2IonTests.cpp  MsCalibratomaticTests.cpp  MsFrameTests.cpp  MsUtilsTests.cpp  PeakIntegratomaticTests.cpp  PrecursorMzArrangetronTests.cpp  ProteinDigestomaticTests.cpp  QValueSettertronTests.cpp  QuanTransitionRefinertronTests.cpp  SequenceSubstringSearchomaticTests.cpp  TargetDecoyCandidatePairManagerTests.cpp  TargetDecoyCandidatePairScoretronTests.cpp  TargetDecoyCandidatePairScoretronV2Tests.cpp  TargetDecoyCandidatePairTests.cpp  TimsMs2IonMobilityIndexTests.cpp  TurboXIC2DTests.cpp  TurboXICTests.cpp  XICPeakManagerTests.cpp  XYMappermaticTests.cpp
AlgorithmsLib/tests/: BiophysicalCalcsTests.cpp  BoostRTreeWrapperTests.cpp  CMakeLists.txt  ClassifierWeightsManagerTests.cpp  DeisotoperTandemTests.cpp  FDRCLassifierNeuralNetTests.cpp  FeatureFinderHillBuilderTests.cpp  FeatureFinderHillClusterTronTests.cpp  FragLibIonRTreeTests.cpp  FragLibraryTronDIATests.cpp  FragLibraryTronTests.cpp  FragmentLibraryRTreeTests.cpp  IRTPredictronTests.cpp  IsotopeDistributionBuilderTests.cpp  MS2ChargeDeconvolvotronTests.cpp  MS2PointsExtractomaticTests.cpp  MissingPeptideManualTroubleshooter.cpp  Ms1FeatureFinderTests.cpp  MsCalibratomaticTests.cpp  MsFrameScoretronProcessormaticTests.cpp  MsFrameScoretronTests.cpp  MsFrameTests.cpp  MsScansDenoiseTronTests.cpp  MsUtilsTests.cpp  PeakIntegratomaticTests.cpp  PeptideMassRTreeTests.cpp  PeptidesLibraryTronTests.cpp  ProteinDigestomaticTests.cpp  ReCalibratomaticTests.cpp  ScanTimeFromIRtMapperTests.cpp  TandemFragmentPredictotronTests.cpp  TandemPredictionUtilsTests.cpp  TandemSpectraDeconvolvotronTests.cpp  TargetDecoyCandidatePairManagerTests.cpp  TargetDecoyCandidatePairScoretronTests.cpp  TurboXICTests.cpp  XYMappermaticTests.cpp
Apps/OrpheusFastaShredder/: CMakeLists.txt  main.cpp
EigenLib/: CMakeLists.txt  EigenLibConfig.cmake.in
EigenLib/src/: EigenKernelUtils.cpp  EigenKernelUtils.h  EigenMatrixDiskUtils.cpp  EigenMatrixDiskUtils.h  EigenSparseUtils.cpp  EigenSparseUtils.h  EigenUtils.cpp  EigenUtils.h
EigenLib/tests/: CMakeLists.txt  EigenKernelUtilsTests.cpp  EigenSparseUtilsTests.cpp  EigenUtilsTests.cpp
FileReaderLibs/tests/: CMakeLists.txt  FastaReaderTests.cpp  MsParquetReaderTests.cpp
FileReadersLib/: CMakeLists.txt
FileReadersLib/src/: AWSStreamifier.cpp  AWSStreamifier.h  CSVReader.cpp  CSVReader.h  CalibrationReader.cpp  CalibrationReader.h  CommandLineParserUtils.cpp  CommandLineParserUtils.h  DIAMzTargetsReader.cpp  DIAMzTargetsReader.h  ExtractedScansReader.cpp  ExtractedScansReader.h  FastaReader.cpp  FastaReader.h  FeatureFinderHillReader.cpp  FeatureFinderHillReader.h  FragLibReader.cpp  FragLibReader.h  FragLibReaderRow.cpp  FragLibReaderRow.h  FragLibTsvReader.cpp  FragLibTsvReader.h  FragLibraryReader.cpp  FragLibraryReader.h  FrameExtractsReader.cpp  FrameExtractsReader.h  JsonParametersReader.cpp  MsCalibrationReader.cpp  MsCalibrationReader.h  MsFraggerTronResultsReader.cpp  MsFraggerTronResultsReader.h  MsFrameScoreVectorReader.cpp  MsFrameScoreVectorReader.h  MsParquetReader.cpp  MsParquetReader.h  MsReaderBase.cpp  MsReaderBase.h  MsReaderBrukerTims.cpp  MsReaderBrukerTims.h  MsReaderMzML.cpp  (+28 more)
FileReadersLib/tests/: CMakeLists.txt  CSVReaderTests.cpp  CommandLineParserUtilsTests.cpp  FastaReaderTests.cpp  FeatureFinderHillReaderTests.cpp  FragLibReaderTests.cpp  FragLibTsvReaderTests.cpp  FragLibraryReaderTests.cpp  JsonParameterReaderTests.cpp  MsCalibrationReaderTests.cpp  MsParquetReaderTests.cpp  MsReaderBaseTests.cpp  MsReaderBrukerTimsTests.cpp  MsReaderMZMLLazyLoadTests.cpp  MsReaderMZMLMappedTests.cpp  MsReaderMZMLTests.cpp  MsReaderParquetTests.cpp  MsReaderPointerAccTests.cpp  PlayGroundTests.cpp  (+6 more)
MachineLrnLib/: CMakeLists.txt  MachineLrnLibConfig.cmake.in
UtilsLib/: CMakeLists.txt  UtilsLibConfig.cmake.in
(+432 files in other folders)
